data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2379.wast
;; 9. **Test Description: Return from Invalid Block Type:**    - Use a `br_table` to branch into returning from a block with mismatched operand types.    - **Constraint Checked:** Ensures returning from an invalid block type enforces proper stack unwinding.    - **Relation to Improper Return Handling:** Checks that invalid block returns do not corrupt the execution state.

(assert_invalid
  (module (func
    (block (result i32)
      (block (br_table 0 1 (i32.const 0) (i64.const 0)) (i32.const 1))
    )
  ))
  "type mismatch"
)